RESOLVED FIXED183729
[DFG] Compare operations do not respect negative zeros
https://bugs.webkit.org/show_bug.cgi?id=183729
Summary [DFG] Compare operations do not respect negative zeros
Yusuke Suzuki
Reported 2018-03-18 09:23:08 PDT
[DFG] Compare operations do not respect negative zeros
Attachments
Patch (4.52 KB, patch)
2018-03-18 09:25 PDT, Yusuke Suzuki
no flags
Patch (6.03 KB, patch)
2018-03-18 11:30 PDT, Yusuke Suzuki
saam: review+
Yusuke Suzuki
Comment 1 2018-03-18 09:25:41 PDT
EWS Watchlist
Comment 2 2018-03-18 10:42:36 PDT
Comment on attachment 336024 [details] Patch Attachment 336024 [details] did not pass jsc-ews (mac): Output: http://webkit-queues.webkit.org/results/7016235 New failing tests: stress/fold-based-on-int32-proof-mul.js.dfg-eager stress/fold-based-on-int32-proof-mul-branch.js.ftl-eager-no-cjit stress/fold-based-on-int32-proof-mul.js.ftl-no-cjit-no-put-stack-validate stress/fold-based-on-int32-proof-mul-branch.js.no-cjit-validate-phases stress/fold-based-on-int32-proof-mul-branch.js.no-cjit-collect-continuously stress/fold-based-on-int32-proof-mul-branch.js.ftl-no-cjit-no-put-stack-validate stress/fold-based-on-int32-proof-mul-branch.js.ftl-no-cjit-no-inline-validate stress/fold-based-on-int32-proof-mul-branch.js.default stress/fold-based-on-int32-proof-mul.js.ftl-eager-no-cjit-b3o1 stress/fold-based-on-int32-proof-mul.js.no-cjit-collect-continuously stress/fold-based-on-int32-proof-mul.js.ftl-no-cjit-b3o1 stress/fold-based-on-int32-proof-mul-branch.js.ftl-no-cjit-small-pool stress/fold-based-on-int32-proof-mul.js.ftl-no-cjit-small-pool stress/fold-based-on-int32-proof-mul-branch.js.no-llint stress/fold-based-on-int32-proof-mul.js.ftl-eager stress/fold-based-on-int32-proof-mul-branch.js.dfg-eager stress/fold-based-on-int32-proof-mul-branch.js.ftl-eager stress/fold-based-on-int32-proof-mul-branch.js.dfg-eager-no-cjit-validate stress/fold-based-on-int32-proof-mul-branch.js.ftl-no-cjit-b3o1 stress/fold-based-on-int32-proof-mul-branch.js.no-ftl stress/fold-based-on-int32-proof-mul.js.no-cjit-validate-phases stress/fold-based-on-int32-proof-mul-branch.js.ftl-eager-no-cjit-b3o1 stress/fold-based-on-int32-proof-mul.js.ftl-no-cjit-validate-sampling-profiler stress/fold-based-on-int32-proof-mul-branch.js.ftl-no-cjit-validate-sampling-profiler stress/fold-based-on-int32-proof-mul.js.dfg-eager-no-cjit-validate stress/fold-based-on-int32-proof-mul.js.ftl-no-cjit-no-inline-validate stress/fold-based-on-int32-proof-mul.js.ftl-eager-no-cjit
Yusuke Suzuki
Comment 3 2018-03-18 10:59:43 PDT
(In reply to Build Bot from comment #2) > Comment on attachment 336024 [details] > Patch > > Attachment 336024 [details] did not pass jsc-ews (mac): > Output: http://webkit-queues.webkit.org/results/7016235 > > New failing tests: > stress/fold-based-on-int32-proof-mul.js.dfg-eager > stress/fold-based-on-int32-proof-mul-branch.js.ftl-eager-no-cjit > stress/fold-based-on-int32-proof-mul.js.ftl-no-cjit-no-put-stack-validate > stress/fold-based-on-int32-proof-mul-branch.js.no-cjit-validate-phases > stress/fold-based-on-int32-proof-mul-branch.js.no-cjit-collect-continuously > stress/fold-based-on-int32-proof-mul-branch.js.ftl-no-cjit-no-put-stack- > validate > stress/fold-based-on-int32-proof-mul-branch.js.ftl-no-cjit-no-inline-validate > stress/fold-based-on-int32-proof-mul-branch.js.default > stress/fold-based-on-int32-proof-mul.js.ftl-eager-no-cjit-b3o1 > stress/fold-based-on-int32-proof-mul.js.no-cjit-collect-continuously > stress/fold-based-on-int32-proof-mul.js.ftl-no-cjit-b3o1 > stress/fold-based-on-int32-proof-mul-branch.js.ftl-no-cjit-small-pool > stress/fold-based-on-int32-proof-mul.js.ftl-no-cjit-small-pool > stress/fold-based-on-int32-proof-mul-branch.js.no-llint > stress/fold-based-on-int32-proof-mul.js.ftl-eager > stress/fold-based-on-int32-proof-mul-branch.js.dfg-eager > stress/fold-based-on-int32-proof-mul-branch.js.ftl-eager > stress/fold-based-on-int32-proof-mul-branch.js.dfg-eager-no-cjit-validate > stress/fold-based-on-int32-proof-mul-branch.js.ftl-no-cjit-b3o1 > stress/fold-based-on-int32-proof-mul-branch.js.no-ftl > stress/fold-based-on-int32-proof-mul.js.no-cjit-validate-phases > stress/fold-based-on-int32-proof-mul-branch.js.ftl-eager-no-cjit-b3o1 > stress/fold-based-on-int32-proof-mul.js.ftl-no-cjit-validate-sampling- > profiler > stress/fold-based-on-int32-proof-mul-branch.js.ftl-no-cjit-validate-sampling- > profiler > stress/fold-based-on-int32-proof-mul.js.dfg-eager-no-cjit-validate > stress/fold-based-on-int32-proof-mul.js.ftl-no-cjit-no-inline-validate > stress/fold-based-on-int32-proof-mul.js.ftl-eager-no-cjit It shows the existing bug. CompareEq(Int32Only, NonIntAsdouble) is converted to false. But NonIntAsdouble includes `-0`.
Yusuke Suzuki
Comment 4 2018-03-18 11:30:17 PDT
Saam Barati
Comment 5 2018-06-06 14:38:54 PDT
Comment on attachment 336026 [details] Patch r=me
Yusuke Suzuki
Comment 6 2018-06-06 19:28:07 PDT
Radar WebKit Bug Importer
Comment 7 2018-06-06 19:29:22 PDT
Note You need to log in before you can comment on or make changes to this bug.